--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,13 +1,9 @@
-
-
-
-
-      
-<div class="jumbotron jumbotron-fluid" style="color : black;">
-   <div class="container">
-      
-     <h1 class="display-4">Breach Alert System</h1>
-     <p class="lead">Click Below to join Now!</p> <a href="/users/sign-up"> <button class="btn btn-primary">Sign Up!</button></a>
-   </div>
- </div>
-
+<div class="jumbotron jumbotron-fluid" style="color: black">
+  <div class="container">
+    <h1 class="display-4">Breach Alert System</h1>
+    <p class="lead">Click Below to join Now!</p>
+    <a href="/users/sign-up">
+      <button class="btn btn-primary">Sign Up!</button></a
+    >
+  </div>
+</div>
