--- a/views/user_sign_in.ejs
+++ b/views/user_sign_in.ejs
@@ -1,4 +1,22 @@
 <h1>Sign In to your Account Please</h1>
+<style>
+    input{
+        border-top: 0px;
+        border-left: 10px;
+        border-right: 5px;
+        border-radius: 5px;
+        
+        border-color: black;
+        margin-left: 10px;
+    
+ 
+  background-image: url("../images/bg.jpg");
+  height: 100%;
+  margin-top: 20px;
+  background-repeat: no-repeat; /* Do not repeat the image */
+  background-size: cover; /* Resize the background image to cover the entire container */}
+
+</style>
 
 <form action="/users/create-session" method="POST">
 
@@ -7,6 +25,6 @@
     <input type="password" name="password" placeholder="Enter your Password" required>
     
 
-   <button type="submit" class="btn btn-dark" style="color: black;"> Sign IN</button>
+   <button type="submit" class="btn btn-dark" style="color: black;"> Sign In</button>
 
 </form> 
