--- a/views/user_sign_up.ejs
+++ b/views/user_sign_up.ejs
@@ -2,11 +2,19 @@
 <style>
     input{
         border-top: 0px;
-        border-left: 0px;
-        border-right: 0px;
-        border-radius: 2px;
+        border-left: 5px;
+        border-right: 5px;
+        border-radius: 5px;
+        
         border-color: black;
-    }
+    
+ 
+  background-image: url("../images/bg.jpg");
+  height: 100%;
+  margin-top: 20px;
+  background-repeat: no-repeat; /* Do not repeat the image */
+  background-size: cover; /* Resize the background image to cover the entire container */}
+
 </style>
 <br>
 <form action='/users/create' method="POST" >
