--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -1,7 +1,7 @@
 footer {
   width: 100%;
   position: fixed;
-  background: #333;
+  background:black;
   color: #fff;
   font-family: cursive;
   height: 40px;
