--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -1,7 +1,7 @@
 header {
   width: 100%;
   position: fixed;
-  background: #333;
+  background:black;
   color: #fff;
   font-family: cursive;
   height: 40px;
